[gd_scene load_steps=5 format=3 uid="uid://p0m5ch1kwnnr"]

[ext_resource type="Texture2D" uid="uid://cgqht4b2rm2fv" path="res://sprites/left1.png" id="1_22iuv"]
[ext_resource type="Script" path="res://scripts/cabeça.gd" id="1_f8gch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vobw0"]
size = Vector2(383, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bw1av"]

[node name="Cabeça" type="CharacterBody2D"]
position = Vector2(186, 251)
scale = Vector2(2, 2)
collision_layer = 4
script = ExtResource("1_f8gch")
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(228, 7)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-181.5, 0)
shape = SubResource("RectangleShape2D_vobw0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(228, 12)
texture = ExtResource("1_22iuv")

[node name="spawn_shoot" type="Marker2D" parent="."]
position = Vector2(218, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(226, 7)
shape = SubResource("RectangleShape2D_bw1av")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
